--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,15 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+index:
+    path: /
+    controller: App\Controller\ProyectoController::index
+
+uno:
+    path: /uno
+    controller: App\Controller\ProyectoController::index1
+
+dos:
+    path: /dos
+    controller: App\Controller\ProyectoController::index2
