--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
         "symfony/flex": "^2",
         "symfony/form": "7.2.*",
         "symfony/framework-bundle": "7.2.*",
-        "symfony/maker-bundle": "^1.61",
         "symfony/runtime": "7.2.*",
         "symfony/security-csrf": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
@@ -78,5 +77,8 @@
             "allow-contrib": false,
             "require": "7.2.*"
         }
+    },
+    "require-dev": {
+        "symfony/maker-bundle": "^1.61"
     }
 }
